Add missing repo checkout

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,6 +15,7 @@ jobs:
       CROSS_COMPILE: riscv64-linux-gnu-
       ARCH: riscv
     steps:
+      - uses: actions/checkout@v4
       - name: install prerequisites
         run: |
           apt-get update
